[project]
name = "polymarket-mcp"
version = "0.1.0"
description = "An MCP server for retrieving prediction market data from Polymarket."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
polymarket-mcp = "polymarket_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
